--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -4,7 +4,7 @@
     android:versionCode="3"
     android:versionName="1.1" >
 
-    <uses-sdk android:minSdkVersion="9" android:targetSdkVersion="25" />
+    <uses-sdk android:minSdkVersion="9" android:targetSdkVersion="25"/>
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
@@ -24,7 +24,7 @@
             </intent-filter>
         </activity>
         <meta-data android:name="com.google.android.gms.version"
-            android:value=g"@integer/google_play_services_version"/>
+            android:value="@integer/google_play_services_version"/>
     </application>
 
 </manifest>
